Publish containers from versioned GitHub releases
